syntax = "proto3";

import "ikipb/iki_activity/activity.proto";

option go_package = "/gpxsvc";

package gpxsvc;

////////////////////////////////////////////////////////////////////////////////
// My Gpx Service
//////

service MyGpxSvc {
  rpc Get (GetMyRequest) returns (stream activity.Chunk) {}
}

message GetMyRequest {
  string activity_id = 1;
}

////////////////////////////////////////////////////////////////////////////////
// Gpx Service
//////

service GpxSvc {
  rpc Get (GetRequest) returns (GetResponse) {}
}

message GetRequest {
  string user_id = 1;
  string activity_id = 2;
}

message GetResponse {
  string activity_id = 1;
  int64 strava_id = 2;
  int64 strava_athlete_id = 3;
  activity.Gpx gpx = 4;
}
